# Better-Rich-Presence-For-Discord

./: README.en.md  README.md  README.pt.md  agents.md  apps.json  index.html  netlify.toml  package-lock.json  package.json  plain.md  vercel.json  vite.config.ts
.agents/: AGENTS.md
docs/: DESIGN.md  Icons.md  SettingRichPresence.md  architecture_rules.md  design_guidelines.md  plain1.md  rich-presence-best-practices.md  structure.md  web_seo_guidelines.md
public/: LandingPage.html  robots.txt  sitemap.xml
scripts/: convert-svgs-to-png.js  download-app-assets.mjs  update-apps-json.js
src/: App.module.css  App.tsx  globals.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  discord.rs  engine.rs  lib.rs  main.rs  presets.rs  types.rs  watcher.rs
src-tauri/src/commands/: mod.rs  presence.rs  process_detector.rs  rich_presence.rs  rules.rs  settings.rs  system.rs
src-tauri/src/models/: apps.json  ide.rs  mod.rs  presets.rs  types.rs
src-tauri/src/services/: activity_builder.rs  app_registry.rs  discord.rs  engine.rs  extension_mapping.rs  ide_registry.rs  mod.rs  parser.rs  presence_db.rs  presence_manager.rs  process_service.rs  title_parser.rs  watcher.rs
src/apps/: app-catalog.ts  app-detector.ts  app-types.ts
src/components/: AppIcon.tsx  AppList.tsx  AppRuleCard.tsx  PresenceCard.tsx  ProcessPicker.tsx
src/discord/: rich-presence-service.ts
src/hooks/: useAppRules.ts  usePresence.ts  useSettings.ts
src/icons/: icon-cache.ts  icon-service.ts  (+1 more)
(+37 files in other folders)
