[package]
name = "better-rich-presence"
version = "0.1.0"
description = "Better Rich Presence for Discord - Smart, customizable Discord Rich Presence manager"
authors = ["Joao"]
edition = "2021"

[lib]
name = "better_rich_presence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
discord-presence = { version = "3.2", features = ["unstable_name"] }
sysinfo = "0.33"
log = "0.4"
chrono = "0.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
]
